# geogrok-training

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml
artifacts/benchmarks/: smoke-chip-read-benchmark.json  training-chip-benchmark.json
artifacts/runs/cnn-embedding-smoke/: embedding.json  eval_embeddings.npy  eval_index.parquet  eval_preprocess_benchmark.json  model.npz  retrieval.json  train_images.npy  train_index.parquet  train_preprocess_benchmark.json  training.json
artifacts/runs/embedding-baseline-smoke/: benchmark.json  embeddings.npy  index.parquet  retrieval.json
artifacts/runs/learned-embedding-smoke/: eval_embeddings.npy  feature_eval_benchmark.json  feature_train_benchmark.json  model.npz  retrieval.json  train_features.npy  training.json
artifacts/runs/torch-embedding-smoke/: embedding.json  eval_preprocess_benchmark.json  model.pt  retrieval.json  train_index.parquet  train_preprocess_benchmark.json  training.json
artifacts/runs/torch-embedding-tuned1/: embedding.json  eval_embeddings.npy  eval_preprocess_benchmark.json  train_preprocess_benchmark.json  training.json
artifacts/runs/training-loop-smoke/: metrics.jsonl  summary.json
docs/: NOTEBOOK.md  feedback.md  implementation-plan.md  information.md  observability-plan.md  prompts.md
scripts/: build_gdal_kakadu.sh  check_gdal_kakadu.sh  check_reference_pykdu.sh  install_reference_pykdu.sh  run_obs_dev.sh  smoke_chip_benchmark.sh  smoke_chip_extraction.sh  smoke_cnn_embedding.sh  smoke_embedding_baseline.sh  smoke_gdal_kakadu_rasters.sh  smoke_learned_embedding.sh  smoke_on_demand_chips.sh  smoke_pairs.sh  smoke_pan_adapt_benchmark.sh  smoke_pretrained_benchmark.sh  smoke_torch_embedding.sh  smoke_torch_pair_eval.sh  smoke_torch_pair_holdout.sh  smoke_training_dataset.sh  smoke_training_loop.sh  sync_reference_kakadujs.sh
src/geogrok/: __init__.py
src/geogrok/data/: __init__.py  benchmark.py  chips.py  manifests.py  pairs.py  runtime.py  (+1 more)
tests/: test_baseline.py  test_benchmark.py  test_chips.py  test_loop.py  test_manifests.py  test_obs_annotations.py  test_obs_review_artifacts.py  test_obs_review_tables.py  test_obs_run_index.py  test_pair_eval.py  test_pairs.py  test_pan_adapt_benchmark.py  test_pretrained_benchmark.py  test_retrieval_baseline.py  test_retrieval_cnn.py  test_retrieval_learned.py  test_retrieval_torch.py  test_runtime.py  test_training.py
tools/spacenet/: .gitignore  .repomixignore  pyproject.toml  run.sh
web/: README.md  biome.jsonc  package-lock.json  package.json  svelte.config.js  vite.config.ts
web/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
(+60 files in other folders)
