[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "geogrok-training"
version = "0.1.0"
description = "Training and evaluation scaffolding for panchromatic geospatial intelligence."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "ty>=0.0.25",
]

[project.scripts]
geogrok-make-manifests = "geogrok.data.manifests:main"

[tool.ruff]
exclude = ["third_party", ".build", ".local", "tools/spacenet"]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["third_party", ".build", ".local", "tools/spacenet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/geogrok"]
