[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "geogrok-training"
version = "0.1.0"
description = "Training and evaluation scaffolding for panchromatic geospatial intelligence."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "ty>=0.0.25",
]
train = [
    "torch>=2.8.0",
]

[project.scripts]
geogrok-make-manifests = "geogrok.data.manifests:main"
geogrok-extract-chips = "geogrok.data.chips:main"
geogrok-benchmark-chips = "geogrok.data.benchmark:main"
geogrok-benchmark-training = "geogrok.data.training:benchmark_main"
geogrok-run-baseline = "geogrok.training.baseline:main"
geogrok-run-embedding-baseline = "geogrok.retrieval.baseline:main"
geogrok-run-learned-embedding = "geogrok.retrieval.learned:main"
geogrok-run-cnn-embedding = "geogrok.retrieval.cnn:main"
geogrok-run-torch-embedding = "geogrok.retrieval.torch_encoder:main"

[tool.ruff]
exclude = ["third_party", ".build", ".local", "tools/spacenet"]
line-length = 100
src = ["src", "tests"]
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ty.environment]
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = ["third_party", ".build", ".local", "tools/spacenet"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/geogrok"]
